# Prometheus-demo

./: Dockerfile  Makefile  README.md  cadvisor.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
app/: main.py
promethus/: prometheus.yaml
