[tool.poetry]
name = "prometheus-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "prometheus_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
prometheus-client = "^0.20.0"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
prometheus-fastapi-instrumentator = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
